--- a/dev/scss/franchise.scss
+++ b/dev/scss/franchise.scss
@@ -1050,6 +1050,9 @@
     }
     .gallery {
         .container {
+            img {
+                width: 100%;
+            }
             .top {
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
